[2단계 - 블랙잭(베팅)] 차리(이찬주) 미션 제출합니다. (#376)
* refactor(Score): 0 점을 상수화

* refactor(dto): 딜러의 승패 카운트 메소드추출

* refactor(User): User에서만 사용하는 name 필드의 접근제어자를 private으로 변경

* refactor(Hand): hand가 score를 필드로 갖지 않도록 변경

* refactor(View): boolean 검증하는 로직 및 베팅금액 입력 추가

* feat(Money): 배팅금액을 관리하는 Money 클래스 추가


문자열을 int로 파싱하는 utils 추가

* refactor(Player): 플레이어에 베팅금액 필드 추가

* refactor(Users): 초기 카드 뽑는 로직을 별도 메소드로 추출

* refactor: 게임 로직 흐름 수정


- 재귀가 아닌 반복문으로 드로우를 하도록 수정
- 딜러 블랙잭시 곧바로 종료하도록 변경

* refactor(MatchRecord): MatchRecord 삭제

* refactor(Player): 플레이어 생성자 로직 변경

* feat(Moeny): 베팅금액을 관리하는 BettingMoney 추가

* refactor(HitStrategy): 딜러의 히트 검사를 함수형 인터페이스로 수정

* feat(State): 유저의 상태를 나타내는 상태 scope 추가

* refactor(User): 유저가 state를 필드로 갖도록 변경

* test(Name): 이름 검증 테스트 추가

* feat(dto): 수익 결과를 보여주는 dto 추가

* refactor(Score): hand가 점수를 갖도록 수정

* refactor(State): isBust 메소드 삭제


state가 점수를 hand로부터 얻기만 하므로 calculate 대신 get으로 변경

* feat(Users): 조기 종료를 위해 모든 플레이어를 stay 시키는 메소드 추가

* refactor: 사용하지 않는 메소드 제거

* refactor: 사용하지 않는 코드 제거

* feat(EarningRate): 수익률을 갖는 EarningRate 클래스 추가

* refactor(Users): 사용하지 않는 파라미터 제거

* refactor: 클래스, 변수, 생성자 접근제어자 변경

* refactor(Hand): 카드를 추가할 경우 새로 할당하는 리스트임을 명확하게 표현

* refactor(State): 블랙잭 확인 여부를 hand가 담당하도록 변경

* refactor(user): 딜러의 이름을 상수화

* refactor(Hand): 히트 여부 확인 및 테스트 추가

* test: 놓친 테스트 추가


- Money가 값으로 비교할 수 있도록 수정

* refactor(Game): 파라미터 이름 구체화

* refactor: 사용하지 않는 변수 제거 및 reformat code

* test(State): 추상클래스에 테스트 추가 및 구체클래스에서 중복테스트 제거

Co-authored-by: cjlee38 <cjlee38@github.com>